# Absand

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: release.yml
docs/: RELEASE_LICENSE_CHECKLIST.md
libs/7zip/CPP/7zip/Archive/: ApfsHandler.cpp  LpHandler.cpp  LvmHandler.cpp  SparseHandler.cpp
libs/7zip/CPP/7zip/UI/FileManager/: BrowseDialog2.cpp
libs/7zip/CPP/Windows/: WinDefs.h
packaging/windows/: Absand.iss  bundle-runtime.sh
plugins/archive/SevenZipPlugin/: CMakeLists.txt  SevenZipPlugin.cpp  SevenZipPlugin.h  sevenzip_plugin.json
plugins/archive/ZipPlugin/: CMakeLists.txt  ZipPlugin.cpp  ZipPlugin.h  zip_plugin.json
plugins/destination/FTPDestinationPlugin/: CMakeLists.txt  FTPDestinationPlugin.cpp  FTPDestinationPlugin.h  ftpdestination_plugin.json
plugins/destination/LocalFolderPlugin/: CMakeLists.txt  LocalFolderPlugin.cpp  LocalFolderPlugin.h  localfolder_plugin.json
plugins/destination/NetworkSharePlugin/: CMakeLists.txt  NetworkSharePlugin.cpp  NetworkSharePlugin.h  networkshare_plugin.json
plugins/destination/SFTPDestinationPlugin/: CMakeLists.txt  SFTPDestinationPlugin.cpp  SFTPDestinationPlugin.h  sftpdestination_plugin.json
plugins/send/ClipboardPlugin/: CMakeLists.txt  ClipboardPlugin.cpp  ClipboardPlugin.h  clipboard_plugin.json
plugins/send/MatrixPlugin/: CMakeLists.txt  MatrixPlugin.cpp  MatrixPlugin.h  matrix_plugin.json
plugins/send/TeamsPlugin/: CMakeLists.txt  TeamsPlugin.cpp  TeamsPlugin.h  teams_plugin.json
plugins/send/TelegramPlugin/: CMakeLists.txt  TelegramPlugin.cpp  TelegramPlugin.h  telegram_plugin.json
scripts/: set-version.sh
src/: TestHarness.cpp  TestHarness.h  main.cpp
src/app/: AppController.cpp  AppController.h
src/core/: PluginManager.cpp  PluginManager.h  SendHttpHelper.h  SevenZipRuntime.h  ThemeManager.cpp  ThemeManager.h  TransferHelpers.cpp  TransferHelpers.h  UserConfig.cpp  UserConfig.h
src/interfaces/: ArchivePluginInterface.h  DestinationPluginInterface.h  PluginInterface.h  SendPluginInterface.h
src/kde/: DolphinPlugin.cpp
src/linux/: absand-app.desktop.in  absand.desktop.in
src/models/: ArchiveEntryModel.cpp  ArchiveEntryModel.h  FilePathListModel.cpp  FilePathListModel.h
src/qml/: BrowserPage.qml  DestinationSettingsPage.qml  HomePage.qml  Main.qml
src/ui/: ArchiveBrowserDialog.cpp  ArchiveBrowserDialog.h  DestinationSettingsDialog.cpp  DestinationSettingsDialog.h  FileDropListWidget.cpp  FileDropListWidget.h  MainDialog.cpp  MainDialog.h  MainDialog.ui  SendSettingsDialog.cpp  SendSettingsDialog.h
tests/: CMakeLists.txt  PluginIntegrationTests.cpp
translations/: absand_en_US.ts  absand_sl_SI.ts
